--- a/python/README.qmd
+++ b/python/README.qmd
@@ -12,12 +12,16 @@ pip install "mall @ git+https://git@github.com/edgararuiz/mall.git@python#subdir
 
 ```{python}
 import mall 
-import polars as tp
+import polars as pl
 
-df = tp.DataFrame(
-    data=["I am happy", "I am sad"],
-    schema=[("txt", tp.String)],
+reviews = pl.DataFrame(
+    data=[
+        "This has been the best TV I've ever used. Great screen, and sound.", 
+        "I regret buying this laptop. It is too slow and the keyboard is too noisy",
+        "Not sure how to feel about my new washing machine. Great color, but hard to figure"
+        ],
+    schema=[("review", pl.String)],
 )
 
-df.llm.sentiment("txt")
+reviews.llm.sentiment("review")
 ```
