Fixes translation, updates README

--- a/python/README.qmd
+++ b/python/README.qmd
@@ -66,3 +66,7 @@ reviews.llm.summarize("review", 5)
 ```{python}
 reviews.llm.summarize("review", 5)
 ```
+
+```{python}
+reviews.llm.translate("review", "spanish")
+```
