--- a/python/README.qmd
+++ b/python/README.qmd
@@ -4,9 +4,19 @@ format: gfm
 
 # mall
 
+## Intro
+
+Run multiple LLM predictions against a data frame. The predictions are processed row-wise over a specified column. It works using a pre-determined one-shot prompt, along with the current row’s content.
+
+## Install
+
+To install from Github, use:
+
 ```python
 pip install "mall @ git+https://git@github.com/edgararuiz/mall.git@python#subdirectory=python"
 ```
+
+## Examples
 
 ```{python}
 #| include: false
@@ -35,6 +45,7 @@ reviews = pl.DataFrame(
 #| include: false
 reviews.llm.use(options = dict(seed = 100))
 ```
+
 
 ## Sentiment
 
