--- a/index.qmd
+++ b/index.qmd
@@ -139,6 +139,25 @@ reviews = pl.DataFrame(
 ```
 :::
 
+```{python}
+import mall 
+import polars as pl
+
+reviews = pl.DataFrame(
+    data=[
+        "This has been the best TV I've ever used. Great screen, and sound.", 
+        "I regret buying this laptop. It is too slow and the keyboard is too noisy",
+        "Not sure how to feel about my new washing machine. Great color, but hard to figure"
+        ],
+    schema=[("review", pl.String)],
+)
+```
+
+```{python}
+#| include: false
+reviews.llm.use(options = dict(seed = 100))
+```
+
 For the first example, we'll asses the sentiment of each review. In order to 
 do this we will call `llm_sentiment()`:
 
@@ -168,6 +187,8 @@ The function let's us modify the options to choose from:
 ## R
 
 ```{r}
+#| eval: true
+
 reviews |>
   llm_sentiment(review, options = c("positive", "negative"))
 ```
@@ -175,6 +196,8 @@ reviews |>
 ## python 
 
 ```{python}
+#| eval: true
+
 reviews.llm.sentiment("review", options=["positive", "negative"])
 ```
 
@@ -183,11 +206,26 @@ reviews.llm.sentiment("review", options=["positive", "negative"])
 As mentioned before, by being pipe friendly, the results from the LLM prediction
 can be used in further transformations: 
 
+::: {.panel-tabset group="language"}
+## R
+
 ```{r}
+#| eval: true
+
 reviews |>
   llm_sentiment(review, options = c("positive", "negative")) |>
   filter(.sentiment == "negative")
 ```
+
+## python
+
+```{python}
+
+reviews.llm.sentiment("review", options=["positive", "negative"]).filter(sentiment == "negative")
+
+```
+
+:::
 
 ### Summarize
 
