--- a/reference/_api_index.qmd
+++ b/reference/_api_index.qmd
@@ -1,7 +1,7 @@
----
-toc: false
----
-<img src="../figures/favicon/apple-touch-icon-180x180.png" style="float:right" />
+# Function reference {.doc .doc-index}
+
+## mall
+
 
 
 | | |
