--- a/index.qmd
+++ b/index.qmd
@@ -96,6 +96,13 @@ pip install "mall @ git+https://git@github.com/edgararuiz/mall.git@python#subdir
 
 ### With local LLMs
 
+- [Download Ollama from the official website](https://ollama.com/download)
+
+- Install and start Ollama in your computer
+
+
+::: {.panel-tabset group="language"}
+## R
 - Install Ollama in your machine. The `ollamar` package's website provides this
 [Installation guide](https://hauselin.github.io/ollama-r/#installation)
 
@@ -104,8 +111,25 @@ Llama 3.2 to test. To get that model you can run:
   ```r
   ollamar::pull("llama3.2")
   ```
+  
+## python
 
-### With Databricks
+- Install the official Ollama library
+  ```python
+  pip install ollama
+  ```
+
+- Download an LLM model. For example, I have been developing this package using
+Llama 3.2 to test. To get that model you can run: 
+  ```python
+  import ollama
+  ollama.pull('llama3.2')
+  ```
+:::
+
+
+  
+### With Databricks (R only)
 
 If you pass a table connected to **Databricks** via `odbc`, `mall` will 
 automatically use Databricks' LLM instead of Ollama. *You won't need Ollama 
