--- a/index.qmd
+++ b/index.qmd
@@ -152,8 +152,6 @@ We will start with loading a very small data set contained in `mall`. It has
 ## R
 
 ```{r}
-
-
 library(mall)
 
 data("reviews")
@@ -164,20 +162,14 @@ reviews
 ## python
 
 ```{python}
-
-
-
+#| eval: true 
 import mall 
 import polars as pl
 
-reviews = pl.DataFrame(
-    data=[
-        "This has been the best TV I've ever used. Great screen, and sound.", 
-        "I regret buying this laptop. It is too slow and the keyboard is too noisy",
-        "Not sure how to feel about my new washing machine. Great color, but hard to figure"
-        ],
-    schema=[("review", pl.String)],
-)
+data = mall.MallData
+
+reviews = data.reviews
+reviews 
 ```
 :::
 
