--- a/python/README.qmd
+++ b/python/README.qmd
@@ -31,14 +31,10 @@ html_formatter.for_type(pl.DataFrame, lambda df: "\n".join(HTMLFormatter(df).ren
 import mall 
 import polars as pl
 
-reviews = pl.DataFrame(
-    data=[
-        "This has been the best TV I've ever used. Great screen, and sound.", 
-        "I regret buying this laptop. It is too slow and the keyboard is too noisy",
-        "Not sure how to feel about my new washing machine. Great color, but hard to figure"
-        ],
-    schema=[("review", pl.String)],
-)
+data = mall.MallData
+
+reviews = data.reviews
+
 ```
 
 ```{python}
